force-app/main/default/objects/Egg__c/Egg__c.object-meta.xml
<CustomObject>
    <label>Egg</label>
    <nameField>
        <label>Egg Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Eggs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>