force-app/main/default/objects/Egg__c/fields/Age_of_Egg_At_OPU__c.field-meta.xml
<CustomField>
    <fullName>Age_of_Egg_At_OPU__c</fullName>
    <label>Age of Patient At OPU</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>