force-app/main/default/objects/Egg__c/fields/Cycle_Egg_Active_In__c.field-meta.xml
<CustomField>
    <fullName>Cycle_Egg_Active_In__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Used to link eggs when thawed but not yet consumed.</description>
    <label>Cycle Egg Active In</label>
    <referenceTo>Cycle__c</referenceTo>
    <relationshipLabel>Eggs (Egg Cycle Active In)</relationshipLabel>
    <relationshipName>Eggs2</relationshipName>
    <type>Lookup</type>
</CustomField>