force-app/main/default/objects/Egg__c/fields/Date_Time_Inseminated__c.field-meta.xml
<CustomField>
    <fullName>Date_Time_Inseminated__c</fullName>
    <label>Date &amp; Time Inseminated</label>
    <type>DateTime</type>
</CustomField>