force-app/main/default/objects/Egg__c/fields/Denuded__c.field-meta.xml
<CustomField>
    <fullName>Denuded__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Denuded</label>
    <type>Checkbox</type>
</CustomField>