force-app/main/default/objects/Egg__c/fields/Device_Colour__c.field-meta.xml
<CustomField>
    <fullName>Device_Colour__c</fullName>
    <label>Device Colour</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Device_Colours</valueSetName>
    </valueSet>
</CustomField>