force-app/main/default/objects/Egg__c/fields/Discard_Reason__c.field-meta.xml
<CustomField>
    <fullName>Discard_Reason__c</fullName>
    <label>Discard Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>