force-app/main/default/objects/Egg__c/fields/Discarded_By__c.field-meta.xml
<CustomField>
    <fullName>Discarded_By__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Discarded By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Eggs3</relationshipName>
    <type>Lookup</type>
</CustomField>