force-app/main/default/objects/Egg__c/fields/Egg_Cohort__c.field-meta.xml
<CustomField>
    <fullName>Egg_Cohort__c</fullName>
    <label>Egg Cohort</label>
    <referenceTo>Egg_Cohort__c</referenceTo>
    <relationshipLabel>Eggs</relationshipLabel>
    <relationshipName>Eggs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>