force-app/main/default/objects/Egg__c/fields/Egg_Comments__c.field-meta.xml
<CustomField>
    <fullName>Egg_Comments__c</fullName>
    <label>Egg Comments</label>
    <length>255</length>
    <type>Text</type>
</CustomField>