force-app/main/default/objects/Egg__c/fields/Egg_Freeze_Scientist__c.field-meta.xml
<CustomField>
    <fullName>Egg_Freeze_Scientist__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Egg Freeze Scientist</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Eggs1</relationshipName>
    <type>Lookup</type>
</CustomField>