force-app/main/default/objects/Egg__c/fields/Egg_Number__c.field-meta.xml
<CustomField>
    <fullName>Egg_Number__c</fullName>
    <label>Egg Number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>