force-app/main/default/objects/Egg__c/fields/Genetic_Producer__c.field-meta.xml
<CustomField>
    <fullName>Genetic_Producer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Genetic Producer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Eggs</relationshipLabel>
    <relationshipName>Eggs</relationshipName>
    <type>Lookup</type>
</CustomField>