force-app/main/default/objects/Egg__c/fields/Goblet_Colour__c.field-meta.xml
<CustomField>
    <fullName>Goblet_Colour__c</fullName>
    <label>Goblet Colour</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Goblet_Colours</valueSetName>
    </valueSet>
</CustomField>