force-app/main/default/objects/Egg__c/fields/Grade__c.field-meta.xml
<CustomField>
    <fullName>Grade__c</fullName>
    <label>Grade</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MII</fullName>
            </value>
            <value>
                <fullName>MI - MII</fullName>
            </value>
            <value>
                <fullName>MI</fullName>
            </value>
            <value>
                <fullName>GV</fullName>
            </value>
            <value>
                <fullName>RZ</fullName>
            </value>
            <value>
                <fullName>EZ</fullName>
            </value>
            <value>
                <fullName>Abn</fullName>
            </value>
            <value>
                <fullName>No Oocyte</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>