force-app/main/default/objects/Egg__c/fields/Insemination_Method__c.field-meta.xml
<CustomField>
    <fullName>Insemination_Method__c</fullName>
    <label>Insemination Method</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Insemination_Method</valueSetName>
    </valueSet>
</CustomField>