force-app/main/default/objects/Egg__c/fields/Straw_Number__c.field-meta.xml
<CustomField>
    <fullName>Straw_Number__c</fullName>
    <label>Straw Number</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>